# ai-answer-checker

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent_tests/pay-details-us-agent/: 0_small_talk.yaml  1_base_pay_change_2025_feb.yaml  2_bonus_period_2025_feb.yaml  3_pre_tax_401k_health_insurance_2025_mar.yaml  4_benefits_gym_reimbursement_2025_mar_apr.yaml  5_student_loan_payment_2025_mar_apr.yaml  6_pre_tax_medical_401k_denver_2025_mar_apr.yaml  7_overtime_2025_mar_apr.yaml  8_company_car_bik_2025_mar_apr.yaml  9_pto_payout_2025_mar_apr.yaml  agent-services.yaml  base_salary_march_2025.yaml  march_deduction.yaml
ai-answer-checker/: README.md  pytest.ini
ai-answer-checker/.context/: PROJECT-SUMMARY-2025.md  context-rules.md  create-project.md
ai-answer-checker/ai_answer_checker/: __main__.py  cli.py  models.py
ai-answer-checker/configs/: pay-details-us-agent.yaml
ai-answer-checker/examples/: test_embedding_providers.py
ai-answer-checker/reports/: pay-details-us-agent_results_2025-08-06T06-41-16Z.csv
ai-answer-checker/unit_tests/: test_models.py  test_yaml_validation.py
ai_answer_checker/: models.py
ai_answer_checker/services/: report_writer_service.py  semantic_providers.py  stub_service.py
configs/: pay-details-us-agent.yaml
payroll_ai_checker/: cli.py  runner.py
payroll_ai_checker/services/: http_client_service.py  report_writer_service.py  (+3 more)
reports/: pay-details-us-agent_results_2025-08-09T18-32-06Z.csv
unit_tests/: test_semantic_providers.py  test_services.py  test_stub_service_integration.py  test_yaml_validation.py
(+61 files in other folders)
