[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-answer-checker"
version = "0.1.0"
description = "CLI regression runner for AI agent responses"
authors = [
    {name = "AI Answer Checker", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "httpx",
    "httpx-sse",
    "fastapi",
    "uvicorn[standard]",
    "ruamel.yaml",
    "pydantic",
    "openai",
]

[project.scripts]
ai-answer-checker = "ai_answer_checker:main"

[tool.setuptools.packages.find]
include = ["ai_answer_checker*"]